# CarbonEngine

./: .gitignore
Engine/: CMakeLists.txt  GenerateSln.bat
Engine/Shader/: ps.shader  vs.shader
Engine/Shader/D3D11/: ps.shader
Engine/Shader/OpenGL/: ps.shader  vs.shader
Engine/Source/Core/: Archive.cpp  Archive.h  Engine.cpp  Engine.h  FileArchive.cpp  FileArchive.h  GameScene.cpp  GameScene.h  GlobalParameters.cpp  Name.cpp  Name.h  PipelineBoundState.cpp  PipelineBoundState.h  Resource.h  ViewRenderer.cpp  ViewRenderer.h  ViewScene.h
Engine/Source/Runtime/: InitApp.cpp
Engine/Source/Runtime/Common/: Platform.h
Engine/Source/Runtime/Common/Container/: CArray.h  CBitArray.h  CIterator.h  CLinkedList.h  CString.h
Engine/Source/Runtime/Common/Log/: FileLogContext.cpp  FileLogContext.h  Log.cpp  Log.h  LogContext.h  LogManager.cpp  LogManager.h
Engine/Source/Runtime/Common/Math/: Color.cpp  Color.h  Math.h  Matrix.cpp  Matrix.h  Vector2.h  Vector3.h  Vector4.h  VectorCommon.h
Engine/Source/Runtime/Common/Misc/: Assertion.h  Build.h
Engine/Source/Runtime/Common/Platform/: DataType.h  Platform.h  PlatformFile.h  PlatformFileNames.h  PlatformString.h
Engine/Source/Runtime/Common/Utility/: PtrProxy.h  Singleton.h  UtilityMacro.h
Engine/Source/Runtime/Common/Windows/: WinFile.cpp  WinFile.h  WinLogContext.cpp  WinLogContext.h  WinMain.cpp  WinNames.cpp  WinNames.h  WinPlatform.h  WinString.h
Engine/Source/Runtime/Platform/: Platform.h
Engine/Source/Runtime/Renderer/Common/: RAL.cpp  RAL.h  RALBuffer.cpp  RALBuffer.h  RALDefine.h  RALGlobalMethods.cpp  RALGlobalMethods.h  RALIndexBuffer.cpp  RALIndexBuffer.h  RALInterface.cpp  RALInterface.h  RALMethod.h  RALMethods.h  RALPipelineBoundState.cpp  RALPipelineBoundState.h  RALRenderTarget.cpp  RALRenderTarget.h  RALResource.h  RALShader.cpp  RALShader.h  RALShaderBoundState.cpp  RALShaderBoundState.h  RALVertexBuffer.cpp  RALVertexBuffer.h  RALVertexLayout.cpp  RALVertexLayout.h  RALView.cpp  RALView.h  RALViewport.cpp  RALViewport.h
Engine/Source/Runtime/Renderer/D3D11/: D3D11Define.cpp  D3D11Define.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11Interface.cpp  D3D11Interface.h  D3D11Methods.cpp  D3D11PipelineBoundState.cpp  D3D11PipelineBoundState.h  D3D11RenderTarget.cpp  D3D11RenderTarget.h  D3D11Shader.cpp  D3D11Shader.h  D3D11ShaderBoundState.cpp  D3D11ShaderBoundState.h  D3D11ShaderCompiler.cpp  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  D3D11VertexLayout.cpp  D3D11VertexLayout.h  D3D11View.cpp  D3D11View.h  D3D11Viewport.cpp  D3D11Viewport.h
Engine/Source/Runtime/Renderer/OpenGL/: OGLDefine.cpp  OGLDefine.h  OGLIndexBuffer.cpp  OGLIndexBuffer.h  OGLInterface.cpp  OGLInterface.h  OGLMethods.cpp  OGLPipelineBoundState.cpp  OGLPipelineBoundState.h  OGLShader.cpp  OGLShader.h  OGLShaderBoundState.cpp  OGLShaderBoundState.h  OGLShaderCompiler.cpp  OGLVertexBuffer.cpp  OGLVertexBuffer.h  OGLVertexLayout.cpp  OGLVertexLayout.h  OGLView.cpp  OGLView.h
Engine/Source/Runtime/Renderer/OpenGL/PlatformOGL/: PlatformOGL.h  WindowsOGL.cpp
Engine/Source/Runtime/Shader/: FlipViewShader.cpp  FlipViewShader.h  GlobalShaderCache.cpp  GlobalShaderCache.h  GlobalShaders.cpp  GlobalShaders.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderManater.cpp  ShaderManater.h  ShaderMetaData.h
Engine/Source/Runtime/Windows/: WinMain.cpp  WinPlatform.h  WinString.h
Engine/Source/Temp/: ps.h  vs.h
Engine/Source/UI/Base/: basewindow.cpp  basewindow.h  basewindow.ui  qtproject.cpp  qtproject.h  qtproject.ui
Engine/Source/UI/Base/GeneratedFiles/: qrc_basewindow.cpp  qrc_qtproject.cpp  ui_basewindow.h  ui_qtproject.h
Engine/Source/UI/Base/GeneratedFiles/Debug/: moc_basewindow.cpp  moc_qtproject.cpp
Engine/VSBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Carbon.sln  Carbon.vcxproj  Carbon.vcxproj.filters  cmake_install.cmake  serializedData
Engine/VSBuild/Carbon.dir/Debug/Carbon.tlog/: CL.read.1.tlog  CL.write.1.tlog  Carbon.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
